# teloxide-telegram-bot-template

./: .dict_env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: update-readme.yml
src/: commander.rs  config.rs  dispatcher.rs  lib.rs  loader.rs  main.rs
src/data/: database.rs
src/filters/: blacklist.rs  filter.rs  mod.rs  regex.rs
src/handlers/: admin.rs  blaclists.rs  commands.rs  mod.rs  other_text_messega.rs  start_help.rs
src/keyboards/: inline_buttons.rs  keyboard.rs  keyboard_buttons.rs  mod.rs
src/models/: mod.rs  model.rs
