[package]
name = "teloxide_telegram_bot_template"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
rusqlite = "0.32.1"
regex = "1.10.6"

[[bin]]
name = "teloxide-telegram-bot-template"
path = "src/main.rs"
